--- a/panel/login.html
+++ b/panel/login.html
@@ -23,7 +23,6 @@
       --navy3:#0F3B6A;
 
       --accent:#21A1FF;
-      --accent2:#63D3FF;
 
       --shadow: 0 24px 70px rgba(0,0,0,.16);
       --shadow-soft: 0 12px 28px rgba(6,26,45,.12);
@@ -94,13 +93,10 @@
       z-index:2;
     }
 
-    .window{
+    .panel{
       width:100%;
-      max-width: 980px;
-      display:grid;
-      grid-template-columns: 1.05fr .95fr;
-      gap: 18px;
-      background: rgba(255,255,255,.38);
+      max-width: 520px;
+      background: rgba(255,255,255,.40);
       border: 1px solid rgba(255,255,255,.35);
       border-radius: 28px;
       box-shadow: var(--shadow);
@@ -113,34 +109,17 @@
     }
     @keyframes in { to{ transform: translateY(0); opacity:1; } }
 
-    .left{
-      padding: 22px;
+    .head{
+      padding: 18px 18px 14px;
       background:
-        radial-gradient(900px 340px at 20% 0%, rgba(33,161,255,.28), transparent 55%),
+        radial-gradient(900px 320px at 15% 0%, rgba(33,161,255,.25), transparent 55%),
         linear-gradient(135deg, var(--navy) 0%, var(--navy2) 55%, var(--navy3) 100%);
-      position:relative;
-      border-right: 1px solid rgba(255,255,255,.12);
-    }
-    .left::before{
-      content:"";
-      position:absolute; inset:-2px;
-      background:
-        radial-gradient(circle at 20% 15%, rgba(255,255,255,.12), transparent 35%),
-        radial-gradient(circle at 90% 0%, rgba(255,255,255,.10), transparent 40%),
-        radial-gradient(circle at 55% 120%, rgba(255,255,255,.10), transparent 45%);
-      opacity:.85;
-      pointer-events:none;
-    }
-
-    .brand{
-      position:relative;
-      z-index:2;
-      display:flex; align-items:center; gap:12px;
-      margin-bottom: 18px;
+      border-bottom: 1px solid rgba(255,255,255,.10);
       color:white;
+      display:flex; gap:12px; align-items:center;
     }
     .mark{
-      width:46px; height:46px;
+      width:44px; height:44px;
       border-radius: 16px;
       background: rgba(255,255,255,.10);
       border: 1px solid rgba(255,255,255,.22);
@@ -157,51 +136,30 @@
     }
     @keyframes spin{ to{ transform: rotate(360deg); } }
 
-    .brand h1{
+    .head h1{
       font-family:'Montserrat',system-ui,sans-serif;
-      font-size: 20px;
+      font-size: 18px;
       letter-spacing:-.02em;
+      margin:0;
     }
-    .brand p{
-      color: rgba(255,255,255,.82);
+    .head p{
+      color: rgba(255,255,255,.86);
       font-weight:700;
-      font-size: 13px;
-      margin-top:4px;
+      font-size: 12.5px;
+      margin-top:6px;
     }
 
-    .left .note{
-      position:relative;
-      z-index:2;
-      margin-top: 18px;
-      color: rgba(255,255,255,.82);
-      font-weight:650;
-      font-size: 13px;
-      line-height:1.45;
-    }
-
-    .right{
-      padding: 22px;
-      display:flex;
-      flex-direction:column;
-      justify-content:center;
-      gap: 12px;
-    }
-
-    .panel{
-      background: var(--card);
-      border: 1px solid var(--border);
-      border-radius: 22px;
-      box-shadow: var(--shadow-soft);
+    .body{
       padding: 18px;
+      background: var(--card);
     }
-
-    .panel h2{
+    .body h2{
       font-family:'Montserrat',system-ui,sans-serif;
       font-size: 22px;
       letter-spacing:-.02em;
       margin-bottom: 6px;
     }
-    .panel .hint{
+    .body .hint{
       color: var(--muted);
       font-weight:700;
       font-size: 13px;
@@ -225,7 +183,7 @@
       border-radius: 14px;
       font-size: 15px;
       font-weight: 650;
-      background: rgba(255,255,255,.88);
+      background: rgba(255,255,255,.92);
       transition: transform .18s var(--ease), border-color .18s var(--ease), box-shadow .18s var(--ease);
     }
     .in:focus{
@@ -261,7 +219,7 @@
     .btn-primary:hover{transform: translateY(-1px); box-shadow: 0 24px 60px rgba(6,26,45,.34); filter:saturate(1.05)}
     .btn-ghost{
       width: 120px;
-      background: rgba(255,255,255,.65);
+      background: rgba(255,255,255,.70);
       border: 1px solid rgba(6,26,45,.12);
       color: var(--navy2);
       box-shadow: var(--shadow-soft);
@@ -290,10 +248,6 @@
     }
     @keyframes pop{ from{opacity:0; transform: translateY(-6px) scale(.98)} to{opacity:1; transform: translateY(0) scale(1)} }
 
-    @media (max-width: 920px){
-      .window{grid-template-columns: 1fr;}
-      .left{border-right:none; border-bottom: 1px solid rgba(255,255,255,.12)}
-    }
     @media (prefers-reduced-motion: reduce){
       *{animation-duration: 0.001ms !important; animation-iteration-count: 1 !important; transition-duration: 0.001ms !important;}
       .bg-accent{display:none;}
@@ -305,48 +259,40 @@
   <div class="bg-accent"></div>
 
   <div class="wrap">
-    <div class="window" role="dialog" aria-label="Acceso empresas NEXCARD">
-      <section class="left">
-        <div class="brand">
-          <div class="mark" aria-hidden="true"></div>
-          <div>
-            <h1>NEXCARD</h1>
-            <p>NFC + QR • Leads a Sheets</p>
+    <div class="panel" role="dialog" aria-label="Acceso empresas NEXCARD">
+      <div class="head">
+        <div class="mark" aria-hidden="true"></div>
+        <div>
+          <h1>NEXCARD</h1>
+          <p>Acceso privado • token • multiempresa</p>
+        </div>
+      </div>
+
+      <div class="body">
+        <h2>Acceso empresas</h2>
+        <div class="hint">Ventana flotante • diseño moderno • seguro con token</div>
+
+        <form id="loginForm">
+          <label for="email">Email</label>
+          <input class="in" id="email" type="email" autocomplete="username" required>
+
+          <label for="password">Contraseña</label>
+          <input class="in" id="password" type="password" autocomplete="current-password" required>
+
+          <label for="empresa_id">Empresa ID</label>
+          <input class="in" id="empresa_id" type="text" placeholder="empresa_id" required>
+
+          <label for="empresa_alias">Nombre visible (opcional)</label>
+          <input class="in" id="empresa_alias" type="text" placeholder="Nombre visible">
+
+          <div class="row">
+            <button class="btn btn-primary" id="btnLogin" type="submit">Entrar</button>
+            <button class="btn btn-ghost" id="btnClear" type="button">Limpiar</button>
           </div>
-        </div>
 
-        <div class="note">
-          Acceso privado para empresas autorizadas.
-        </div>
-      </section>
-
-      <section class="right">
-        <div class="panel">
-          <h2>Acceso empresas</h2>
-          <div class="hint">Ventana flotante • diseño moderno • seguro con token</div>
-
-          <form id="loginForm">
-            <label for="email">Email</label>
-            <input class="in" id="email" type="email" autocomplete="username" required>
-
-            <label for="password">Contraseña</label>
-            <input class="in" id="password" type="password" autocomplete="current-password" required>
-
-            <label for="empresa_id">Empresa ID</label>
-            <input class="in" id="empresa_id" type="text" placeholder="empresa_id" required>
-
-            <label for="empresa_alias">Nombre visible (opcional)</label>
-            <input class="in" id="empresa_alias" type="text" placeholder="Nombre visible">
-
-            <div class="row">
-              <button class="btn btn-primary" id="btnLogin" type="submit">Entrar</button>
-              <button class="btn btn-ghost" id="btnClear" type="button">Limpiar</button>
-            </div>
-
-            <div class="err" id="errBox"></div>
-          </form>
-        </div>
-      </section>
+          <div class="err" id="errBox"></div>
+        </form>
+      </div>
     </div>
   </div>
 
@@ -386,7 +332,7 @@
       clearErr();
     });
 
-    // (Opcional PRO) recordar última empresa sin mostrar tips
+    // recordar última empresa sin mostrar tips
     document.addEventListener("DOMContentLoaded", () => {
       const lastEmp = localStorage.getItem(EMPRESA_KEY) || "";
       const lastAlias = localStorage.getItem(ALIAS_KEY) || "";
