--- a/panel/dashboard.html
+++ b/panel/dashboard.html
@@ -27,7 +27,7 @@
       --shadow-soft: 0 12px 28px rgba(6,26,45,.12);
 
       --ease: cubic-bezier(.22,1,.36,1);
-      --maxw: 70rem;
+      --maxw: 74rem;
     }
 
     *{margin:0;padding:0;box-sizing:border-box}
@@ -55,16 +55,10 @@
       z-index:0;
     }
 
-    .bg-accent{
-      position:fixed; inset:-20%;
-      pointer-events:none; z-index:0;
-      filter: blur(42px);
-    }
+    .bg-accent{position:fixed; inset:-20%; pointer-events:none; z-index:0; filter: blur(42px);}
     .bg-accent::before,.bg-accent::after{
-      content:"";
-      position:absolute;
-      width:min(620px, 72vw);
-      height:min(620px, 72vw);
+      content:""; position:absolute;
+      width:min(620px, 72vw); height:min(620px, 72vw);
       border-radius:999px;
       background: radial-gradient(circle at 30% 30%, rgba(33,161,255,.52), rgba(33,161,255,.05) 70%, transparent 72%);
       animation: floatBlob 10s var(--ease) infinite;
@@ -120,44 +114,25 @@
       border-bottom: 1px solid rgba(255,255,255,.10);
     }
 
-    .brand{
-      display:flex; align-items:center; gap:12px;
-      color:white;
-    }
+    .brand{display:flex; align-items:center; gap:12px; color:white;}
     .mark{
-      width:44px; height:44px;
-      border-radius: 16px;
+      width:44px; height:44px; border-radius:16px;
       background: rgba(255,255,255,.10);
       border: 1px solid rgba(255,255,255,.22);
       box-shadow: 0 14px 40px rgba(0,0,0,.22);
-      position:relative;
-      overflow:hidden;
+      position:relative; overflow:hidden;
     }
     .mark::after{
-      content:"";
-      position:absolute; inset:-40%;
+      content:""; position:absolute; inset:-40%;
       background: conic-gradient(from 180deg, rgba(33,161,255,0), rgba(33,161,255,.35), rgba(255,255,255,0));
-      animation: spin 5s linear infinite;
-      opacity:.8;
+      animation: spinGlow 4.8s linear infinite; opacity:.8;
     }
-    @keyframes spin{ to{ transform: rotate(360deg); } }
+    @keyframes spinGlow{ to{ transform: rotate(360deg); } }
 
-    .brand h1{
-      font-family:'Montserrat',system-ui,sans-serif;
-      font-size: 18px;
-      margin:0;
-      letter-spacing:-.02em;
-    }
-    .who{
-      color: rgba(255,255,255,.88);
-      font-weight:700;
-      font-size: 12.5px;
-      margin-top:6px;
-    }
+    .brand h1{font-family:'Montserrat',system-ui,sans-serif; font-size:18px; letter-spacing:-.02em;}
+    .who{color: rgba(255,255,255,.88); font-weight:700; font-size:12.5px; margin-top:6px;}
 
-    .actions{
-      display:flex; gap: 10px; align-items:center; flex-wrap:wrap;
-    }
+    .actions{display:flex; gap: 10px; align-items:center; flex-wrap:wrap;}
     .btn{
       height: 44px;
       border: none;
@@ -168,8 +143,7 @@
       padding: 0 14px;
       display:flex; align-items:center; justify-content:center; gap: 10px;
       transition: transform .18s var(--ease), box-shadow .18s var(--ease), filter .18s var(--ease);
-      user-select:none;
-      white-space:nowrap;
+      user-select:none; white-space:nowrap;
     }
     .btn-ghost{
       background: rgba(255,255,255,.18);
@@ -195,17 +169,8 @@
     }
     .dot{width:8px;height:8px;border-radius:99px;background:var(--accent); box-shadow: 0 0 0 4px rgba(33,161,255,.15)}
 
-    .content{
-      padding: 18px;
-      display:grid;
-      gap: 14px;
-    }
-
-    .kpis{
-      display:grid;
-      grid-template-columns: repeat(4, 1fr);
-      gap: 12px;
-    }
+    .content{padding: 18px; display:grid; gap: 14px;}
+    .kpis{display:grid; grid-template-columns: repeat(4, 1fr); gap: 12px;}
     @media (max-width: 980px){ .kpis{grid-template-columns: repeat(2, 1fr);} }
 
     .kpi{
@@ -215,23 +180,10 @@
       box-shadow: var(--shadow-soft);
       padding: 14px;
     }
-    .kpi b{
-      display:block;
-      font-family:'Montserrat',system-ui,sans-serif;
-      font-size: 22px;
-      letter-spacing:-.02em;
-    }
-    .kpi span{
-      color: var(--muted);
-      font-weight: 700;
-      font-size: 12.5px;
-    }
+    .kpi b{display:block; font-family:'Montserrat',system-ui,sans-serif; font-size: 22px; letter-spacing:-.02em;}
+    .kpi span{color: var(--muted); font-weight: 700; font-size: 12.5px;}
 
-    .grid{
-      display:grid;
-      gap: 14px;
-      grid-template-columns: 1.2fr .8fr;
-    }
+    .grid{display:grid; gap: 14px; grid-template-columns: 1.25fr .75fr;}
     @media (max-width: 980px){ .grid{grid-template-columns: 1fr;} }
 
     .card{
@@ -242,16 +194,8 @@
       padding: 16px;
     }
 
-    .row{
-      display:flex; gap: 10px; align-items:center; flex-wrap:wrap;
-      justify-content:space-between;
-    }
-
-    .title{
-      font-family:'Montserrat',system-ui,sans-serif;
-      font-weight: 800;
-      font-size: 16px;
-    }
+    .row{display:flex; gap: 10px; align-items:center; flex-wrap:wrap; justify-content:space-between;}
+    .title{font-family:'Montserrat',system-ui,sans-serif; font-weight: 800; font-size: 16px;}
     .muted{color: var(--muted); font-weight:700; font-size:12.5px; line-height:1.5}
 
     .in, .sel{
@@ -265,7 +209,7 @@
       transition: transform .18s var(--ease), border-color .18s var(--ease), box-shadow .18s var(--ease);
     }
     .in{width:100%}
-    .sel{min-width: 180px}
+    .sel{min-width: 200px}
     .in:focus, .sel:focus{
       outline:none;
       border-color: rgba(33,161,255,.85);
@@ -284,7 +228,7 @@
       width:100%;
       border-collapse: separate;
       border-spacing:0;
-      min-width: 820px;
+      min-width: 940px;
       font-size: 13.5px;
     }
     th, td{
@@ -295,9 +239,7 @@
       white-space:nowrap;
     }
     th{
-      position: sticky;
-      top: 0;
-      z-index: 2;
+      position: sticky; top: 0; z-index: 2;
       background: rgba(245,248,255,.95);
       backdrop-filter: blur(8px);
       -webkit-backdrop-filter: blur(8px);
@@ -305,27 +247,34 @@
     }
     tr:hover td{background: rgba(33,161,255,.06);}
 
+    .mini-btn{
+      height: 34px;
+      padding: 0 10px;
+      border-radius: 12px;
+      border: 1px solid rgba(6,26,45,.12);
+      background: rgba(255,255,255,.72);
+      font-weight: 900;
+      cursor:pointer;
+      margin-right: 6px;
+    }
+    .mini-danger{border-color: rgba(255,59,59,.25); color:#b42318;}
+
     .pager{
       display:flex; align-items:center; justify-content:space-between;
       gap: 10px; margin-top: 12px; flex-wrap:wrap;
     }
     .pager .left, .pager .right{display:flex; align-items:center; gap:10px; flex-wrap:wrap;}
     .pager .pbtn{
-      height: 40px;
-      border-radius: 12px;
-      padding: 0 12px;
+      height: 40px; border-radius: 12px; padding: 0 12px;
       border: 1px solid rgba(6,26,45,.12);
       background: rgba(255,255,255,.72);
-      font-weight: 900;
-      cursor:pointer;
+      font-weight: 900; cursor:pointer;
     }
     .pager .pbtn:disabled{opacity:.55; cursor:not-allowed}
     .pager .info{color:var(--muted); font-weight:800; font-size:12.5px}
 
     .toast{
-      position:fixed;
-      left:50%;
-      bottom:18px;
+      position:fixed; left:50%; bottom:18px;
       transform: translateX(-50%);
       background: rgba(11,27,42,.92);
       color:white;
@@ -335,6 +284,100 @@
       display:none;
       z-index: 99;
     }
+
+    /* Modal */
+    .modal-backdrop{
+      position:fixed; inset:0;
+      background: rgba(0,0,0,.35);
+      backdrop-filter: blur(4px);
+      -webkit-backdrop-filter: blur(4px);
+      display:none;
+      align-items:center;
+      justify-content:center;
+      z-index: 120;
+      padding: 18px;
+    }
+    .modal{
+      width: min(720px, 96vw);
+      background: rgba(255,255,255,.80);
+      border: 1px solid rgba(255,255,255,.40);
+      border-radius: 22px;
+      box-shadow: var(--shadow);
+      overflow:hidden;
+      transform: translateY(10px);
+      opacity:0;
+      transition: all .18s var(--ease);
+    }
+    .modal-backdrop.show{display:flex;}
+    .modal-backdrop.show .modal{transform: translateY(0); opacity:1;}
+    .modal-header{
+      padding: 14px 16px;
+      background:
+        radial-gradient(900px 320px at 15% 0%, rgba(33,161,255,.18), transparent 55%),
+        linear-gradient(135deg, rgba(6,26,45,.92) 0%, rgba(10,42,74,.92) 55%, rgba(15,59,106,.92) 100%);
+      color:white;
+      display:flex;
+      align-items:center;
+      justify-content:space-between;
+      gap: 10px;
+    }
+    .modal-header b{font-family:'Montserrat',system-ui,sans-serif;}
+    .modal-body{padding: 14px 16px;}
+    .form-grid{
+      display:grid;
+      grid-template-columns: 1fr 1fr;
+      gap: 12px;
+    }
+    @media (max-width: 760px){ .form-grid{grid-template-columns: 1fr;} }
+
+    .fg label{
+      display:block;
+      font-size:12px;
+      font-weight:900;
+      color: rgba(11,27,42,.78);
+      letter-spacing:.06em;
+      text-transform:uppercase;
+      margin-bottom:6px;
+    }
+    .fg input, .fg textarea{
+      width:100%;
+      border:1px solid rgba(6,26,45,.12);
+      border-radius: 14px;
+      padding: 10px 12px;
+      font-weight: 700;
+      background: rgba(255,255,255,.92);
+      font-size: 14px;
+    }
+    .fg textarea{min-height: 96px; resize: vertical;}
+    .modal-actions{
+      padding: 12px 16px 16px;
+      display:flex;
+      gap: 10px;
+      justify-content:flex-end;
+      flex-wrap:wrap;
+    }
+    .btn-primary{
+      color:white;
+      background:
+        radial-gradient(160px 120px at 20% 10%, rgba(99,211,255,.55), transparent 55%),
+        linear-gradient(135deg, var(--navy) 0%, var(--navy2) 55%, var(--navy3) 100%);
+      box-shadow: 0 18px 40px rgba(6,26,45,.22);
+    }
+    .btn-light{
+      background: rgba(255,255,255,.72);
+      border: 1px solid rgba(6,26,45,.12);
+      color: var(--navy2);
+      box-shadow: var(--shadow-soft);
+    }
+    .btn-small{height: 42px; padding: 0 12px; border-radius: 14px;}
+    .spinner{
+      width: 16px; height: 16px;
+      border: 2px solid rgba(255,255,255,.85);
+      border-top-color: transparent;
+      border-radius: 999px;
+      animation: spin .7s linear infinite;
+    }
+    @keyframes spin{ to{ transform: rotate(360deg); } }
   </style>
 </head>
 
@@ -353,8 +396,9 @@
         </div>
 
         <div class="actions">
-          <span class="tag"><span class="dot"></span> <span id="empresaAlias">—</span> (<span id="empresaId">—</span>)</span>
-          <a class="btn btn-ghost" href="login.html">Cambiar cuenta</a>
+          <span class="tag"><span class="dot"></span> Empresa: <span id="empresaId">—</span></span>
+          <button class="btn btn-ghost" id="openEmpresaBtn" type="button">Cambiar empresa</button>
+          <button class="btn btn-ghost" id="refreshBtn" type="button">Refrescar</button>
           <button class="btn btn-danger" id="logoutBtn" type="button">Cerrar sesión</button>
         </div>
       </div>
@@ -372,7 +416,7 @@
             <div class="row">
               <div>
                 <div class="title">Contactos</div>
-                <div class="muted">Registros sincronizados desde la base de datos de la empresa</div>
+                <div class="muted">Registros en tu Google Sheet (auto) • ordenados por fecha</div>
               </div>
               <input id="contactsSearch" class="in" style="max-width: 340px;" placeholder="Buscar…">
             </div>
@@ -390,6 +434,10 @@
 
               <button class="btn btn-ghost" id="clearFiltersBtn" type="button" style="height:46px;">
                 Limpiar filtros
+              </button>
+
+              <button class="btn btn-ghost" id="exportCsvBtn" type="button" style="height:46px;">
+                Exportar CSV
               </button>
             </div>
 
@@ -417,24 +465,42 @@
           <div class="card">
             <div class="title">Acciones</div>
             <div class="muted" style="margin-top:6px;">
-              Administra registros: editar y borrar desde la tabla.
+              • Ver detalle • Editar • Borrar • Exportar<br>
+              (usa tu Apps Script: listLeads / saveLead / deleteLead)
             </div>
 
             <div style="height:12px"></div>
 
-            <button class="btn btn-ghost" id="copyEmpresaLink" type="button" style="width:100%; height:46px;">
-              Copiar link del panel
+            <button class="btn btn-ghost" id="copyDashboardLink" type="button" style="width:100%; height:46px;">
+              Copiar link del dashboard
             </button>
+
+            <div style="height:10px"></div>
+
+            <a class="btn btn-ghost" href="login.html" style="width:100%; height:46px; text-decoration:none;">
+              Volver a Login
+            </a>
           </div>
         </div>
       </div>
     </div>
   </div>
 
+  <!-- Modals -->
+  <div class="modal-backdrop" id="modalBackdrop">
+    <div class="modal" role="dialog" aria-modal="true" aria-label="Modal">
+      <div class="modal-header">
+        <b id="modalTitle">—</b>
+        <button class="btn btn-ghost btn-small" id="modalCloseBtn" type="button">Cerrar</button>
+      </div>
+      <div class="modal-body" id="modalBody"></div>
+      <div class="modal-actions" id="modalActions"></div>
+    </div>
+  </div>
+
   <div class="toast" id="toast"></div>
 
-  <!-- ✅ SOLO estos 2 scripts. NO app.js -->
-  <script src="config.js"></script>
+  <!-- SOLO dashboard.js -->
   <script src="dashboard.js"></script>
 </body>
 </html>
